tests/parsing/invalid/unterminated_bin_bit_string/bus.fbd
Main bus
	c config; init-value = b"1100
